--- a/.gorc
+++ b/.gorc
@@ -1,2 +1,2 @@
-export GOROOT="/usr/local/go"
-export GOPATH="/Users/jebentier/development/go"
+export GOROOT="/usr/local/Cellar/go/1.16.6/libexec"
+export GOPATH="$HOME/development/gopath"
